[package]
name = "is_worcester_underwater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = "1.0.193"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
