[package]
name = "is_worcester_underwater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# wasm
wasm-bindgen-futures = "0.4"
# make fetch calls
gloo-net = "0.5"
# deserialise json
serde = { version = "1.0", features = ["derive"] }
# log to browser console
log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
# useful geometric types
euclid = "0.22"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]